<resources>
    <string name="app_name">Qual é o Estado?</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_act_jogo">Qual é o Estado?</string>
    <string name="label_ok">OK</string>
    <string name="label_cancelar">CANCELAR</string>

    <!-- ActMain -->
    <string name="label_seus_pontos">Seus Pontos:</string>
    <string name="label_novo_jogo">Novo Jogo</string>
    <string name="label_opcoes">Opções</string>

    <!-- ActJogo -->
    <string name="label_hint_resposta">Nome Estado ou sigla</string>
    <string name="label_pular">Pular</string>
    <string name="label_resposta_correta">Resposta correta!
    </string>
    <string name="label_resposta_incorreta">Resposta incorreta!</string>
    <string name="label_campo_resposta_vazio">Campo de resposta vazio</string>
    <string name="label_sem_pontos">Infelizmente, você não tem pontos suficientes</string>

    <!-- ActEstatistica -->
    <string name="title_activity_act_estatistica">Minhas Estatísticas</string>
    <string name="stats.num.erros">Número de erros:</string>
    <string name="stats.num.acertos">Número de acertos:</string>
    <string name="stats.num.pulos.resposta">Número de pulos:</string>
    <string name="stats.num.usos.dica.bandeira">Número de usos dica bandeira:</string>
    <string name="stats.num.usos.dica.descricao">Número de usos dica descrção:</string>
    <string name="stats.num.usos.dica.letra">Número de usos dica letra:</string>
    <string name="stats.maior.num.pontos">Maior número de pontos:</string>
    <string name="stats.menor.num.pontos">Menor número de pontos:</string>

    <string name="label_estatisticas">Estatísticas</string>
    <string name="title_activity_act_opcoes">Opções</string>
    <string name="label_som_botoes">Ativar som dos botões</string>
    <string name="pref_title_sounds">SONS</string>
    <string name="buttons">Botões</string>
    <string name="pref_summary_buttons">Emitir som ao clicar em um botão</string>
    <string name="background_music">Música de fundo</string>
    <string name="pref_summary_bg_music">Habilitar a música de fundo em todas as telas do jogo</string>
    <string name="pref_title_list_bg_music">Escolha a música de fundo</string>
    <string name="list_pref_summary_bg_music">Selecione uma música de fundo que tocará durante todo o jogo</string>
</resources>
